[project]
name = "portfolio-cms-api"
version = "0.1.0"
description = "CMS api for simraan portfolio project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.6.17",
    "fastapi>=0.138.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
