[project]
name = "portfolio-cms-api"
version = "0.1.0"
description = "CMS api for simraan portfolio project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "certifi>=2026.6.17",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
]
